@@ -57,6 +57,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.Collections;
 
 /**
  * This is the implementation of the UserResources.
@@ -648,7 +649,11 @@ public class UserResourcesImpl extends AbstractResources implements UserResource
      */
     @Override
     public void upgradeUser(long userId, long planId, UpgradeSeatType seatType) throws SmartsheetException {
-        changeSeatType(seatType.name(), USERS + "/" + userId + PLANS + planId + "/upgrade");
+        if (seatType != null) {
+            changeSeatType(seatType.name(), USERS + "/" + userId + PLANS + planId + "/upgrade");
+            return;
+        }
+        changeSeatType(null, USERS + "/" + userId + PLANS + planId + "/upgrade");
     }
 
     /**
@@ -667,12 +672,15 @@ public class UserResourcesImpl extends AbstractResources implements UserResource
      */
     @Override
     public void downgradeUser(long userId, long planId, DowngradeSeatType seatType) throws SmartsheetException {
+        Util.throwIfNull(seatType);
         changeSeatType(seatType.name(), USERS + "/" + userId + PLANS + planId + "/downgrade");
     }
 
     private void changeSeatType(String seatType, String path) throws SmartsheetException {
-        Util.throwIfNull(seatType);
-        Map<String, String> body = Map.of("seatType", seatType);
+        Map<String, String> body = Collections.emptyMap();
+        if (seatType != null) {
+            body = Map.of("seatType", seatType);
+        }
         createResource(path, Result.class, body);
     }
 
